--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "element-ui": "^2.3.4",
     "onsenui": "~2.4.0",
     "vue": "^2.3.3",
     "vue-onsenui": "~2.0.0",
