--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.3.3",
     "vue-onsenui": "~2.5.0",
     "vue-router": "^2.6.0",
+    "vue2-google-maps": "^0.9.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
