--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "element-ui": "^2.3.4",
     "onsenui": "~2.9.0",
     "vue": "^2.3.3",
+    "vue-axios": "^2.1.1",
     "vue-onsenui": "~2.5.0",
     "vue-router": "^2.6.0",
     "vue2-google-maps": "^0.9.3",
