iOSビルドの追加

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:android": "node build/build-android.js",
-    "build:watch": "cross-env WEBPACK_WATCH=true node build/build.js",
     "debug:android": "node build/debug-android.js",
+    "build:ios": "node build/build-ios.js",
+    "debug:ios": "node build/debug-ios.js",
+    "build:watch": "cross-env WEBPACK_WATCH=true node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
